# agora-core

./: .gitignore  CMakeLists.txt  README.md  decision-journal.md  main.cpp
src/: Order.h  OrderBook.cpp  OrderBook.h  Trade.h
tests/: OrderBook_test.cpp
